# AI-Payment-Fraud-Investigator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  plugin.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  skill-validator.yml
agents/: compliance-reviewer.md  fraud-investigator.md  risk-analyst.md
config/: config.yaml
data/samples/: sample_transactions.json
docs/: architecture.md
references/: decision-policy.md  fraud-typologies.md  investigation-checklist.md  memory-and-learning.md  risk-scoring-rubric.md
scripts/: validate_skills.py
skills/anomaly-detection/: SKILL.md
skills/case-memory/: SKILL.md
skills/data-enrichment/: SKILL.md
skills/device-fingerprinting/: SKILL.md
skills/fraud-decisioning/: SKILL.md
skills/geolocation-risk/: SKILL.md
skills/investigation-reporting/: SKILL.md
skills/risk-scoring/: SKILL.md
skills/transaction-analysis/: SKILL.md
skills/transaction-intake/: SKILL.md
skills/using-fraud-investigator/: SKILL.md
skills/velocity-analysis/: SKILL.md
skills/watchlist-screening/: SKILL.md
src/fraud_investigator/: __init__.py  cli.py
src/fraud_investigator/agents/: __init__.py  base.py  decision_agent.py  enrichment_agent.py  intake_agent.py  orchestrator.py  reporting_agent.py  risk_scoring_agent.py
src/fraud_investigator/llm/: __init__.py  client.py
src/fraud_investigator/memory/: __init__.py  models.py  (+2 more)
template/: SKILL.md
tests/: __init__.py  conftest.py  test_memory.py  test_pipeline.py  test_skills.py
(+19 files in other folders)
